[tool.poetry]
name = "first-project"
version = "0.1.0"
description = ""
authors = ["Tejeshwar <tejeshwarreddy25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
